CSS List: list-style-position

--- a/14.Lists.Tables.And.Forms.html
+++ b/14.Lists.Tables.And.Forms.html
@@ -10,6 +10,9 @@
             #list_style_image {
                 list-style-image: url(Icon.png);
             }
+            #list_style_position {
+                list-style-position: inside;
+            }
         </style>
     </head>
     <body>
@@ -27,6 +30,11 @@
             <li>list</li>
             <li>style</li>
             <li>image</li>
+        </ul>
+        <ul id="list_style_position">
+            <li>list</li>
+            <li>style</li>
+            <li>position</li>
         </ul>
     </body>
 </html>
