CSS List: list-style

--- a/14.Lists.Tables.And.Forms.html
+++ b/14.Lists.Tables.And.Forms.html
@@ -13,10 +13,14 @@
             #list_style_position {
                 list-style-position: inside;
             }
+            #list_style {
+                list-style: circle inside;
+            }
         </style>
     </head>
     <body>
         <ul id="unordered_list_style">
+            Unordered List Style:
             <li>unordered</li>
             <li>list</li>
             <li>style</li>
@@ -35,6 +39,11 @@
             <li>list</li>
             <li>style</li>
             <li>position</li>
+        </ul>
+        <ul id="list_style">
+            List Style:
+            <li>list</li>
+            <li>style</li>
         </ul>
     </body>
 </html>
