CSS Table: border-spacing & border-collapse

--- a/14.Lists.Tables.And.Forms.html
+++ b/14.Lists.Tables.And.Forms.html
@@ -20,6 +20,10 @@
                 border: 1px solid #0088dd;
                 empty-cells: hide; /* show, hide, inherit */
             }
+            #test_table {
+                border-spacing: 10px 10px;
+                border-collapse: collapse; /* If this is used, the above properties will be ignored. */
+            }
         </style>
     </head>
     <body>
