--- a/14.Lists.Tables.And.Forms.html
+++ b/14.Lists.Tables.And.Forms.html
@@ -24,6 +24,9 @@
                 border-spacing: 10px 10px;
                 border-collapse: collapse; /* If this is used, the above properties will be ignored. */
             }
+            a {
+                cursor: crosshair; /* auto, crosshair, default, pointer, move, text, wait, help, url(Image.png) */
+            }
         </style>
     </head>
     <body>
@@ -63,5 +66,6 @@
                 <td></td>
             </tr>
         </table>
+        <a href="14.Lists.Tables.And.Forms.html">Myself</a>
     </body>
 </html>
