CSS Layout: Relative Positioning

--- a/15.Layout.html
+++ b/15.Layout.html
@@ -4,9 +4,15 @@
             body {
                 position: static;
             }
+            #relative_positioning {
+                position: relative;
+                top: 100px;
+                left: 100px;
+            }
         </style>
     </head>
     <body>
         <div>Normal Flow</div>
+        <div id="relative_positioning">Relative Positioning</div>
     </body>
 </html>
