--- a/15.Layout.html
+++ b/15.Layout.html
@@ -8,11 +8,24 @@
                 position: relative;
                 top: 100px;
                 left: 100px;
+                background-color: #ff0000;
+                width: 300px;
+            }
+            #absolute_positioning {
+                position: absolute;
+                top: 100px;
+                left: 0px;
+                background-color: #00ff00;
+                width: 150px;
             }
         </style>
     </head>
     <body>
         <div>Normal Flow</div>
-        <div id="relative_positioning">Relative Positioning</div>
+        <div id="relative_positioning">
+            Relative Positioning
+            <div id="absolute_positioning">Absolute Positioning</div>
+        </div>
+        <div>Hello World</div>
     </body>
 </html>
