CSS Layout: Fixed Positioning

--- a/15.Layout.html
+++ b/15.Layout.html
@@ -18,6 +18,12 @@
                 background-color: #00ff00;
                 width: 150px;
             }
+            #fixed_positioning {
+                position: fixed;
+                top: 10px;
+                left: 100px;
+                background-color: #0000ff;
+            }
         </style>
     </head>
     <body>
@@ -27,5 +33,6 @@
             <div id="absolute_positioning">Absolute Positioning</div>
         </div>
         <div>Hello World</div>
+        <div id="fixed_positioning">Fixed Positioning</div>
     </body>
 </html>
