CSS Layout: Floating Elements

--- a/15.Layout.html
+++ b/15.Layout.html
@@ -37,6 +37,10 @@
                 left: 20px;
                 z-index: 1;
             }
+            #floating_elements {
+                float: left;
+                width: 100px;
+            }
         </style>
     </head>
     <body>
@@ -49,5 +53,7 @@
         <div id="fixed_positioning">Fixed Positioning</div>
         <div id="z_index_1">Z Index 1</div>
         <div id="z_index_2">Z Index 2</div>
+        <div id="floating_elements">Floating Elements</div>
+        <div>Hello world</div>
     </body>
 </html>
