CSS Image: centering images

--- a/16.Images.html
+++ b/16.Images.html
@@ -4,6 +4,8 @@
             img.medium {
                 width: 300px;
                 height: 200px;
+                display: block;
+                margin: 0px auto;
             }
         </style>
     </head>
