CSS Image: background

--- a/16.Images.html
+++ b/16.Images.html
@@ -7,9 +7,16 @@
                 display: block;
                 margin: 0px auto;
             }
+            #background_img {
+                background: url("Image.png");
+                background-repeat: repeat-y; /* repeat, repeat-x, repeat-y, no-repeat */
+                background-attachment: fixed; /* fixed, scroll */
+                width: 200px;
+            }
         </style>
     </head>
     <body>
         <div><img src="Image.png" class="medium"></div>
+        <div id="background_img">Background Image Background Image Background Image Background Image Background Image Background Image Background Image Background Image Background Image Background Image Background Image Background Image Background Image Background Image Background Image Background Image Background Image Background Image Background Image Background Image Background Image Background Image Background Image Background Image Background Image Background Image Background Image Background Image Background Image Background Image </div>
     </body>
 </html>
