--- a/16.Images.html
+++ b/16.Images.html
@@ -13,10 +13,16 @@
                 background-attachment: fixed; /* fixed, scroll */
                 width: 200px;
             }
+            #background_gradient {
+                background-image: linear-gradient(#336666, #66cccc);
+                width: 300px;
+                height: 300px;
+            }
         </style>
     </head>
     <body>
         <div><img src="Image.png" class="medium"></div>
         <div id="background_img">Background Image Background Image Background Image Background Image Background Image Background Image Background Image Background Image Background Image Background Image Background Image Background Image Background Image Background Image Background Image Background Image Background Image Background Image Background Image Background Image Background Image Background Image Background Image Background Image Background Image Background Image Background Image Background Image Background Image Background Image </div>
+        <div id="background_gradient">Background Gradient</div>
     </body>
 </html>
